--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,8 @@ buildscript {
         google()
     }
     dependencies {
-
+        classpath 'org.wisepersist:gwt-gradle-plugin:1.1.16'
+        classpath 'org.gretty:gretty:3.0.7'
 
     }
 }
