--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -41,4 +41,9 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
         name: jacoco-report
-        path: .github/workflows/reports/jacoco/test/html/
+        path: .github/workflows/reports/jacoco/test/html
+    - name: Upload library JAR 
+      uses: actions/upload-artifact@v3.1.1
+      with: 
+        name: lib.jar
+        path: .github/workflows/lib.jar
