--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,11 +43,11 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
         name: jacoco-report
-        path: build/reports/jacoco/test/html/
+        path: desktop/build/reports/jacoco/test/html/
     - name: Upload library JAR 
       uses: actions/upload-artifact@v3.1.1
       with: 
         name: lib.jar
-        path: build/libs/lib.jar
+        path: dekstop/build/libs/lib.jar
     
   
