--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,8 +19,10 @@ permissions:
 
 jobs:
   build:
-
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-2022, macos-12]
+    runs-on: ${{ matrix.os }}
     
   
     steps:
@@ -42,12 +44,42 @@ jobs:
     - name: Upload JaCoCo coverage report as a workflow artifact
       uses: actions/upload-artifact@v3.1.1
       with:
-        name: jacoco-report
+        name: jacoco-report-${{ matrix.os }}
         path: desktop/build/reports/jacoco/test/html/
     - name: Upload library JAR 
       uses: actions/upload-artifact@v3.1.1
       with: 
-        name: lib.jar
+        name: lib-${{ matrix.os }}.jar
         path: dekstop/build/libs/lib.jar
-    
+        
+  release: 
+    runs-on: ubuntu-22.04
+    needs: ["build"]
+    if: startsWith(github.ref, 'refs/tags/')
+    permissions: 
+      contents: write
+    steps: 
+    - name: Download a Build Artifact 
+      uses: actions/download-artifact@v3.0.1
+      with:
+        name: lib.jar
+    - name: Download Ubuntu Build Artifact
+      uses: actions/download-artifact@v3.0.1
+      with: {name: lib-ubuntu-22.04.jar}
+    - name: Rename Ubuntu Build Artifact
+      run: mv lib.jar lib-ubuntu.jar
+    - name: Download Windows Build Artifact
+      uses: actions/download-artifact@v3.0.1
+      with: {name: lib-windows-2022.jar}
+    - name: Rename Windows Build Artifact
+      run: mv lib.jar lib-windows.jar
+    - name: Download MacOs Build Artifact
+      uses: actions/download-artifact@v3.0.1
+      with: {name: lib-macos-12.jar}
+    - name: Rename MacOS Build Artifact
+      run: mv lib.jar lib-macos.jar
+    - name: Release
+      uses: softprops/actions-gh-release@v1
+      with: 
+        files: lib.jar
   
