--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,7 +9,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" , "TestBranch", "Faran", "FaranTest", "TestBranchSam" ]
+    branches: [ "main" , "TestBranch", "Faran", "FaranTest" ]
     tags: [ "v[0-9]+.[0-9]+.[0-9]+" ]
   pull_request:
     branches: [ "main" ]
@@ -45,7 +45,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.1
       with:
         name: jacoco-report-${{ matrix.os }}
-        path: desktop/build/reports/jacoco/test/html/
+        path: ./build/reports/jacoco/test/html/
     - name: Upload library JAR 
       uses: actions/upload-artifact@v3.1.1
       with: 
