--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -9,8 +9,7 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "main" , "TestBranch", "Faran", "FaranTest" ]
-    tags: [ "v[0-9]+.[0-9]+.[0-9]+" ]
+    branches: [ "main", "TestBranch" ]
   pull_request:
     branches: [ "main" ]
 
@@ -19,12 +18,9 @@ permissions:
 
 jobs:
   build:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-2022, macos-12]
-    runs-on: ${{ matrix.os }}
-    
-  
+
+    runs-on: ubuntu-latest
+
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 11
@@ -35,51 +31,9 @@ jobs:
     - name: Build with Gradle
       uses: gradle/gradle-build-action@3fbe033aaae657f011f88f29be9e65ed26bd29ef
       with:
-        arguments: build jacocoTestReport
+        arguments: build
     - name: Upload game JAR
       uses: actions/upload-artifact@v3.1.2
       with:
         name: piazza-panic
         path: desktop/build/libs/desktop-1.0.jar
-    - name: Upload JaCoCo coverage report as a workflow artifact
-      uses: actions/upload-artifact@v3.1.1
-      with:
-        name: jacoco-report-${{ matrix.os }}
-        path: ./build/reports/jacoco/test/html/
-    - name: Upload library JAR 
-      uses: actions/upload-artifact@v3.1.1
-      with: 
-        name: lib-${{ matrix.os }}.jar
-        path: dekstop/build/libs/lib.jar
-        
-  release: 
-    runs-on: ubuntu-22.04
-    needs: ["build"]
-    if: startsWith(github.ref, 'refs/tags/')
-    permissions: 
-      contents: write
-    steps: 
-    - name: Download a Build Artifact 
-      uses: actions/download-artifact@v3.0.1
-      with:
-        name: lib.jar
-    - name: Download Ubuntu Build Artifact
-      uses: actions/download-artifact@v3.0.1
-      with: {name: lib-ubuntu-22.04.jar}
-    - name: Rename Ubuntu Build Artifact
-      run: mv lib.jar lib-ubuntu.jar
-    - name: Download Windows Build Artifact
-      uses: actions/download-artifact@v3.0.1
-      with: {name: lib-windows-2022.jar}
-    - name: Rename Windows Build Artifact
-      run: mv lib.jar lib-windows.jar
-    - name: Download MacOs Build Artifact
-      uses: actions/download-artifact@v3.0.1
-      with: {name: lib-macos-12.jar}
-    - name: Rename MacOS Build Artifact
-      run: mv lib.jar lib-macos.jar
-    - name: Release
-      uses: softprops/actions-gh-release@v1
-      with: 
-        files: lib.jar
-  
